# aibrix

./: .gitignore  .golangci.yml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Makefile  PROJECT  README.md  SECURITY.md  gateway.Dockerfile  go.mod  go.sum  runtime.Dockerfile  runtime.Dockerfile.dockerignore
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 100_feature_request.yml  200_bug_report.yml  300_RFC.yml
.github/workflows/: docker-build-images.yml  docker-push-images.yml  installation-tests.yml  lint-and-tests.yml  python-aibrix-kvcache-tests.yml  python-aibrix-tests.yml  python-publish.yml  python-tests.yml  release-arm-build.yaml  release-build.yaml  tests.yml
benchmarks/: README.md  benchmark.sh
benchmarks/autoscaling/: 7b.yaml  README.md  apa.yaml  bench_workload_generator.py  benchmark.py  debug.yaml  hpa.yaml  kpa.yaml  overnight_run.sh  plot-everything.py  requirements_bench_pa.txt  run-test.sh  set_num_replicas.py  streaming_pod_log_to_file.py
benchmarks/client/: README.md  analyze.py  client.py  utils.py
benchmarks/config/: base.sh
benchmarks/gateway/: 7b.yaml  README.md
benchmarks/generator/: .gitignore  README.md  bird_workload_generator.py  client.py  distribution.py  generate_realistic_prefix_share_workload.py  peak_analysis.py  sample_request.py  synthetic_prefix_sharing_dataset.py  utils.py  workload_generator.py
benchmarks/lora/: README.md
benchmarks/plot/: aibrix0.1-downloader.ipynb  aibrix0.1-lora.ipynb  aibrix0.1-routing.ipynb
benchmarks/ps-experiment/: README.md
benchmarks/utils/: count_num_pods.py  streaming_pod_log_to_file.py
cmd/: main.go
cmd/controllers/: main.go
cmd/kvcache-watcher/: main.go
cmd/metadata/: main.go
cmd/plugins/: main.go
cmd/users/: main.go
config/: .gitignore
config/crd/: kustomization.yaml
config/default/: kustomization.yaml  namespace.yaml  webhookcainjection_patch.yaml
config/dependency/: kustomization.yaml  namespace.yaml
config/gateway/: gateway-plugin.yaml  (+3 more)
development/: README.md
docs/: README.md  requirements-docs.txt
hack/: README.md  boilerplate.go.txt  kind_config.yaml  sync-images.sh  tools.go  update-codegen.sh  verify-codegen.sh
python/aibrix/: README.md  app.py  pyproject.toml
python/aibrix/aibrix/: __init__.py  app.py  config.py  envs.py  logger.py
python/aibrix/aibrix/batch/: __init__.py  constant.py  driver.py  job_manager.py  request_proxy.py  scheduler.py
python/aibrix/aibrix/batch/storage/: __init__.py  batch_storage.py  generic_storage.py  tos_storage.py
python/aibrix/aibrix/common/: errors.py
python/aibrix/aibrix/downloader/: __init__.py  __main__.py  base.py  entity.py  huggingface.py  s3.py  tos.py  utils.py
python/aibrix/aibrix/gpu_optimizer/: Makefile  README.md  app.py  deployment.yaml
python/aibrix/aibrix/gpu_optimizer/load_monitor/: clusterer.py  helpers.py  load_reader.py  monitor.py  profile_reader.py  visualizer.py
python/aibrix/aibrix/gpu_optimizer/optimizer/: __init__.py  optimizer.py  types.py
python/aibrix/aibrix/gpu_optimizer/optimizer/profiling/: README.md  benchmark.py  benchmark.sh  gen_benchmark_prompt.py  gen_profile.py  gpu_benchmark.py
python/aibrix/aibrix/gpu_optimizer/optimizer/profiling/result/: simulator-llama2-7b-a100.json  simulator-llama2-7b-a100.jsonl  simulator-llama2-7b-a100_obsoleted_v1.json  simulator-llama2-7b-a40.json  simulator-llama2-7b-a40.jsonl
python/aibrix/aibrix/gpu_optimizer/optimizer/solver/melange/: __init__.py  example.py  requirements.txt  runner.py  solver.py  util.py
python/aibrix/aibrix/gpu_optimizer/tests/: __init__.py  test_datasetloadreader.py  test_gatewayloadreader.py  test_gen_benchmark.py
python/aibrix/aibrix/gpu_optimizer/utils/: __init__.py  logging.py
python/aibrix/aibrix/metrics/: engine_rules.py  http_collector.py  metrics.py  standard_rules.py
python/aibrix/aibrix/openapi/: model.py  protocol.py
python/aibrix/aibrix/openapi/engine/: base.py  vllm.py
python/aibrix/scripts/: entrypoint.sh  format.sh
python/aibrix/tests/: sample_job_input.json  test_driver.py  test_metrics.py  test_storage.py
python/aibrix/tests/downloader/: test_downloader_hf.py  test_downloader_s3.py  test_downloader_tos.py  test_downloader_tos_v1.py  test_entity.py  test_utils.py
python/aibrix_kvcache/: .gitignore  README.md  pyproject.toml
python/aibrix_kvcache/aibrix_kvcache/: __init__.py  cache_handle.py  cache_manager.py  config.py  envs.py  metrics.py  spec.py  status.py  utils.py
python/aibrix_kvcache/aibrix_kvcache/common/: __init__.py  absl_logging.py  async_base.py  nvtx.py  object_pool.py
python/aibrix_kvcache/aibrix_kvcache/l1/: __init__.py  l1_cache.py
python/aibrix_kvcache/aibrix_kvcache/l1/eviction_policy/: __init__.py  base_eviction_policy.py  fifo.py  lru.py  s3fifo.py
python/aibrix_kvcache/aibrix_kvcache/l2/: __init__.py  l2_cache.py
python/aibrix_kvcache/aibrix_kvcache/l2/connectors/: __init__.py  connector.py  hpkv.py  infinistore.py  mock.py  rocksdb.py
python/aibrix_kvcache/aibrix_kvcache/l2/key_builders/: __init__.py  hasher.py  hex_key_builder.py  key_builder.py  raw_key_builder.py  rolling_hash_key_builder.py  simple_hash_key_builder.py
python/aibrix_kvcache/aibrix_kvcache/l2/marshallers/: __init__.py  marshaller.py  string_serializer.py  tensor_serializer.py  zstd_compressor.py
python/aibrix_kvcache/aibrix_kvcache/l2/placement/: __init__.py  placement.py  simple_placement.py
python/aibrix_kvcache/aibrix_kvcache/memory/: __init__.py  allocator.py  ref_counted_obj.py
python/aibrix_kvcache/aibrix_kvcache/meta_service/: __init__.py  meta_service.py  redis_meta_service.py
python/aibrix_kvcache/integration/vllm/: vllm_v0.8.5-aibrix-kvcache.patch
python/aibrix_kvcache/scripts/: check_aibrix_header.py  format.sh
python/aibrix_kvcache/tests/: conftest.py  test_cache_manager.py  test_eviction_policies.py  test_group_aware_cache_manager.py  test_key_builder.py  test_l1cache.py  test_l2cache.py  test_placement.py  test_tensor_pool_allocator.py
sample/: README.md
test/: README.md  run-e2e-tests.sh
(+765 files in other folders)
