[tool.poetry]
name = "aibrix"
version = "0.1.0"
description = ""
authors = ["brosoul <brosoul@126.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
huggingface-hub = "^0.24.6"
tos = "^2.7.1"
boto3 = "^1.35.5"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
ruff = "^0.6.1"
pytest = "^8.3.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
